Criar endpoints para visualizar e atualizar notifications